--- a/react/memory-games/src/ColorBoxes.css
+++ b/react/memory-games/src/ColorBoxes.css
@@ -1,6 +1,6 @@
 .box-container {
     display: flex;
     flex-wrap: wrap;
-    max-width: 1400px;
+    justify-content: center;
     margin: auto;
 }
