--- a/react/country-flag-guessing/src/Question.css
+++ b/react/country-flag-guessing/src/Question.css
@@ -19,3 +19,14 @@
     margin: 20px;
 }
 
+.answerMsg {
+    font-weight: bold;
+}
+
+.nextButton {
+    font-size: 20px;
+    border-radius: 5px;
+    font-weight: bold;
+    padding: 5px 20px;
+}
+
